--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,19 +9,17 @@
 
 
     <TextView
-            android:layout_width="81dp"
-            android:layout_height="28dp"
-            android:text="Finance app"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtUserInfo"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            android:layout_marginTop="156dp"/>
-
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="172dp"
+            android:layout_marginStart="150dp"/>
     <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             android:text="Deposit"
-            android:layout_width="112dp"
-            android:layout_height="48dp"
             android:id="@+id/btnDeposit"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="240dp"
@@ -63,5 +61,6 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="496dp"
             android:layout_marginStart="164dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
