--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         tools:context=".MainActivity">
 
 
@@ -14,34 +15,118 @@
             android:id="@+id/txtUserInfo"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="172dp"
+            android:layout_marginTop="80dp"
             android:layout_marginStart="150dp"/>
-    <Button
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="Deposit"
-            android:id="@+id/btnDeposit"
+
+
+    <androidx.cardview.widget.CardView
+            android:id="@+id/cvBalance2"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_width="200dp"
+            android:layout_height="130dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="10dp"
+            app:cardMaxElevation="12dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintStart_toEndOf="@id/cvBalance"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="240dp"
-            android:layout_marginStart="164dp"/>
-    <Button
-            android:text="Withdraw"
-            android:layout_width="115dp"
-            android:layout_height="49dp"
-            android:id="@+id/btnWithdraw"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_percent="0.5" >
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <ImageView
+                    android:id="@+id/img2"
+                    android:layout_width="50dp"
+                    android:layout_height="35dp"
+                    android:contentDescription="@string/deposit"
+                    android:src="@drawable/deposit"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/txtTransfer"
+                    android:layout_marginTop="16dp"/>
+
+            <TextView
+                    android:id="@+id/txtTransfer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/deposit"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toBottomOf="@id/img2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginTop="8dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+            android:id="@+id/cvBalance"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_width="200dp"
+            android:layout_height="130dp"
+            android:layout_margin="3dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="10dp"
+            app:cardMaxElevation="12dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="372dp"
-            android:layout_marginStart="164dp"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/cvBalance2"
+            app:layout_constraintWidth_percent="0.5"
+            android:layout_marginTop="156dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <ImageView
+                    android:id="@+id/img"
+                    android:layout_width="50dp"
+                    android:layout_height="35dp"
+                    android:contentDescription="@string/balance"
+                    android:src="@drawable/balance"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/txtBalance"
+                    android:layout_marginTop="16dp"/>
+
+            <TextView
+                    android:id="@+id/txtBalance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/balance"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toBottomOf="@id/img"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginTop="8dp"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
     <Button
             android:text="Transfer"
             android:layout_width="116dp"
             android:layout_height="40dp"
             android:id="@+id/btnTransfer"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="312dp"
-            android:layout_marginStart="164dp"/>
-
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="336dp"
+            android:layout_marginStart="176dp"/>
 
     <Button
             android:text="History"
@@ -50,8 +135,8 @@
             android:id="@+id/btnViewTransactions"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="436dp"
-            android:layout_marginStart="164dp"/>
+            android:layout_marginTop="396dp"
+            android:layout_marginStart="36dp"/>
     <Button
             android:text="Balance"
             android:layout_width="116dp"
@@ -59,46 +144,25 @@
             android:id="@+id/btnViewBalance"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="496dp"
-            android:layout_marginStart="164dp"/>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="233dp"
-        android:layout_height="129dp"
-        android:layout_margin="10dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="168dp"
-        android:layout_marginBottom="16dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="10dp"
-        app:cardMaxElevation="12dp"
-        app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ImageView
-            android:id="@+id/img"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:contentDescription="@string/balance"
-            android:src="@drawable/balance" />
-
-        <TextView
-            android:layout_width="wrap_content"
+            android:layout_marginTop="396dp"
+            android:layout_marginStart="292dp"/>
+    <Button
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:text="@string/balance"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-    </androidx.cardview.widget.CardView>
+            android:layout_width="wrap_content"
+            android:text="Deposit"
+            android:id="@+id/btnDeposit"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="336dp"
+            android:layout_marginStart="36dp"/>
+    <Button
+            android:text="Withdraw"
+            android:layout_width="115dp"
+            android:layout_height="49dp"
+            android:id="@+id/btnWithdraw"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="396dp"
+            android:layout_marginStart="176dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
